# amplifier-dev-dave

./: .gitignore  .gitmodules  AGENTS.md  README.md  ruff.toml
.amplifier/: settings.yaml
.amplifier/eval-agent-definitions/dev-local/: agent.yaml  command_template.txt  install.dockerfile
.amplifier/eval-agent-definitions/dev-local/data/.amplifier/profiles/: dev-local-docker.md
.amplifier/eval-tasks/nfl_season_analysis/: instructions.txt  task.yaml  test.py
.amplifier/profiles/: dev-local-recipes.md  dev-local.md
.claude/: settings.json
.claude/commands/: understand.md
ai_working/: AMPLIFIER_DEV_WORKSPACE.md
amplifier-module-context-coding/: README.md  pyproject.toml
amplifier-module-context-coding/amplifier_module_context_coding/: __init__.py
amplifier-module-orchestrator-coding/: README.md  pyproject.toml
amplifier-module-orchestrator-coding/amplifier_module_orchestrator_coding/: __init__.py
amplifier-module-provider-openai-v2/: .gitignore  AGENTS.md  README.md  pyproject.toml
amplifier-module-provider-openai-v2/ai_context/: AZURE_OPENAI_PYTHON_SDK.md  INDEX.md  RESPONSES_API_CODING.md
amplifier-module-provider-openai-v2/amplifier_module_provider_openai_v2/: __init__.py
amplifier-module-provider-openai-v2/tests/: __init__.py  conftest.py  test_provider.py
scripts/: format.sh  init.sh  install-dev.sh  update-submodules.sh
