[project]
name = "amplifier-module-provider-openai-v2"
version = "1.0.0"
description = "Provider module - OpenAI integration for Amplifier (v2 - best practices edition)"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Amplifier Contributors" },
]
keywords = ["amplifier", "openai", "llm", "provider", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "azure-identity>=1.25,<2.0",
    "openai[aiohttp]>=2.8,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "pytest-mock>=3.14,<4.0",
    "ruff",
]

# CRITICAL: Entry point registration for Amplifier module system
[project.entry-points."amplifier.modules"]
provider-openai-v2 = "amplifier_module_provider_openai_v2:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_openai_v2"]

[tool.hatch.metadata]
allow-direct-references = true

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: Integration tests requiring API keys",
    "unit: Unit tests that can run offline",
]
